layout fixes, new home & videos page, game added

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
+    "react-lite-youtube-embed": "^2.0.3",
+    "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
