--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react-dom": "^17.0.1",
     "react-lite-youtube-embed": "^2.0.3",
     "react-progressive-graceful-image": "^0.6.13",
+    "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.2",
+    "redux": "^4.2.0",
+    "redux-observable": "^2.0.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
