--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "./server.js",
-        "use": "@now/node"
+       {
+       "src": "./index.js",
+       "use": "@vercel/node"
       }
-    ],
+   ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
+       {
+          "src": "/contact",
+          "dest": "/server.js",
+          "methods": ["POST"]
+       }
     ]
-  }
+ }
