--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
+    "version": 2,
+    "builds": [
+        {
+            "src": "index.js",
+            "use": "@vercel/node"
+        }
+    ],
     "routes": [
         {
             "src": "/",
@@ -7,8 +14,7 @@
         {
             "src": "/contact",
             "methods": [
-                "POST",
-                "GET"
+                "POST"
             ],
             "dest": "/api/contact.js"
         }
