--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
     "@u-wave/react-youtube": "^0.7.2",
+    "@vercel/node": "^1.15.4",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemailer": "^6.7.5",
