--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.7.3",
     "@u-wave/react-youtube": "^0.7.2",
     "@vercel/node": "^1.15.4",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemailer": "^6.7.5",
@@ -27,11 +28,10 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start-client": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start":"yarn run build && (cd server && yarn start)"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
