--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@u-wave/react-youtube": "^0.7.2",
     "@vercel/node": "^1.15.4",
     "axios": "^0.27.2",
+    "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemailer": "^6.7.5",
