--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
@@ -12,17 +13,14 @@
     "classnames": "^2.3.1",
     "dotenv": "^16.0.1",
     "firebase": "^9.9.1",
-    "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-lite-youtube-embed": "^2.0.3",
-    "react-progressive-graceful-image": "^0.6.13",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.2.0",
-    "redux-observable": "^2.0.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
